--- a/MobileAcebook/Info.plist
+++ b/MobileAcebook/Info.plist
@@ -7,5 +7,11 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>UIAppFonts</key>
+	<array>
+		<string>SulphurPoint-Bold.ttf</string>
+		<string>SulphurPoint-Light.ttf</string>
+		<string>SulphurPoint-Regular.ttf</string>
+	</array>
 </dict>
 </plist>
